--- a/src/style/index.css
+++ b/src/style/index.css
@@ -19,7 +19,6 @@
   clear: both;
 }
 .head {
-  width: 1366px;
   height: 36px;
   background: #310a0a;
 }
@@ -88,7 +87,6 @@
 }
 nav {
   height: 78px;
-  width: 1366px;
 }
 nav .wrapper > .logo {
   float: left;
@@ -213,7 +211,7 @@ nav > .wrapper > .nav > div:hover > a ~ ul > ul > li > p:nth-of-type(2) {
   width: 226px;
   position: absolute;
   top: 0;
-  left: 98px;
+  left: 90px;
 }
 .banner .banner-nav > div > div {
   height: 60px;
@@ -374,7 +372,7 @@ nav > .wrapper > .nav > div:hover > a ~ ul > ul > li > p:nth-of-type(2) {
   background: #fff;
   float: left;
   width: 228px;
-  padding: 49px 20px;
+  padding: 24px 20px;
   margin-left: 8px;
   margin-bottom: 7px;
   text-align: center;
@@ -385,8 +383,13 @@ nav > .wrapper > .nav > div:hover > a ~ ul > ul > li > p:nth-of-type(2) {
 .text > .text-bot > div > div > a:nth-of-type(2) {
   line-height: 26px;
   margin: 10px 0 ;
+  width: 208px;
   text-decoration: none;
-  color: #000;
+  color: #0a0a0a;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-block;
 }
 .text > .text-bot > div > div > p {
   color: #666;
@@ -580,12 +583,12 @@ nav > .wrapper > .nav > div:hover > a ~ ul > ul > li > p:nth-of-type(2) {
 .footer-bot > .wrapper > .bot > ul li > img {
   padding-right: 12px;
 }
-.nav-left {
+.fixed-nav-left {
   position: fixed;
   top: 32%;
   left: 6px;
 }
-.nav-left > a {
+.fixed-nav-left > a {
   display: inline-block;
   width: 48px;
   height: 48px;
@@ -596,28 +599,40 @@ nav > .wrapper > .nav > div:hover > a ~ ul > ul > li > p:nth-of-type(2) {
   line-height: 48px;
   border-bottom: 1px solid #888;
 }
-.nav-left > a:nth-of-type(1) {
+.fixed-nav-left > a:hover {
   background: #f00;
   color: #fff;
   border: none;
 }
-.nav-left > a:hover {
+.fixed-nav-left .fixed-color {
   background: #f00;
   color: #fff;
   border: none;
 }
-.nav-right {
+.fixed-nav-right {
   position: fixed;
   top: 32%;
-  right: -1308px;
+  right: 12px;
 }
-.nav-right > a {
+.fixed-nav-right > a {
   display: inline-block;
   width: 48px;
   height: 48px;
   text-decoration: none;
   background: #888;
   text-align: center;
-  line-height: 48px;
   border-bottom: 1px solid #999;
+  position: relative;
+}
+.fixed-nav-right > a > span {
+  float: left;
+  color: #e2e0e0;
+  font-size: 24px;
+  font-weight: 100;
+  text-align: center;
+}
+.fixed-nav-right > a > span:last-of-type {
+  position: absolute;
+  top: 12px;
+  right: 12px;
 }
