--- a/src/style/enter.css
+++ b/src/style/enter.css
@@ -54,7 +54,7 @@ main {
 }
 .top > .top-title > div > .active {
   background: #e0dfdf;
-  color: #666;
+  color: #d34242;
 }
 .top > .top-title > div > .text > div {
   width: 384px;
@@ -77,6 +77,7 @@ main {
   font-size: 28px;
 }
 .top > .top-title > div > .top-right {
+  display: none;
   position: absolute;
   top: 58px;
 }
@@ -130,6 +131,8 @@ main {
 .bot > p:nth-of-type(2) > span > a {
   color: #468bf3;
   font-size: 14px;
+  line-height: 42px;
+  display: inline-block;
 }
 .bot > ul {
   width: 420px;
