--- a/src/style/enter.less
+++ b/src/style/enter.less
@@ -54,7 +54,7 @@ main{
             }
             >.active{
                 background: rgb(224, 223, 223);
-                color: #666;
+                color: rgb(211, 66, 66);
             }
         }
 
@@ -84,6 +84,7 @@ main{
         }
 
         >div>.top-right{
+            display: none;
              position: absolute;
              top: 58px;
             >div:nth-of-type(2){
@@ -138,7 +139,8 @@ main{
             >a{
                 color: #468bf3;
                 font-size: 14px; 
-                
+                line-height: 42px;
+                display: inline-block;
             }
         }
         
