--- a/src/style/index.less
+++ b/src/style/index.less
@@ -5,8 +5,9 @@
     text-decoration: none;
 }
 html,body{
-    width: 1366px;
-    // overflow-x: hidden;
+    width: 100%;
+    // padding: 0 16px;
+    overflow-x: hidden;
 }
 .width(@num){
     width: @num;
