--- a/src/style/details.less
+++ b/src/style/details.less
@@ -488,16 +488,20 @@ nav>.wrapper>.nav>div:hover>a~ul{
                 >p:nth-of-type(1){
                     font-size: 16px;
                     line-height: 28px;
+                    user-select: none;
                     >span:nth-of-type(2){
                         border: 1px solid #999;
                         padding: 6px 0;
                         margin-left: 32px;
                         background: rgb(211, 208, 208);
                         
-                        >s{
-                            padding: 6px;
+                        >span{
+                            display:inline-block;
+                            width: 28px;
+                            text-align: center;
                             font-size: 18px;
                             cursor: pointer;
+                            user-select: none;
                         }
                         >input{
                             display: inline-block;
@@ -535,14 +539,20 @@ nav>.wrapper>.nav>div:hover>a~ul{
                             
                         }
                         &:nth-of-type(2){
-                            a{
+                            text-align: center;
+                            font-size: 12px;
+                            padding: 0px 42px;
+                            height: 42px;
+                            line-height: 42px;
+                            cursor: pointer;
+                            display: inline-block;
                                 color: #000;
                                 border: 1px solid rgb(219, 215, 215);
                                 background: rgb(211, 208, 208);
                                 &:hover{
                                     color: rgb(241, 25, 25);
                                 border: 1px solid rgb(243, 34, 34);
-                                 }
+                              
                             }
                         }
                     }
