--- a/src/style/shopCar.less
+++ b/src/style/shopCar.less
@@ -153,51 +153,56 @@ nav{
                 cursor: pointer;
             }
         }
-        >div{
-            margin-bottom: 18px;
-            padding: 12px 66px;
-            position: relative;
-            background: #fff;
-            border: 1px solid #666;
-            border-radius: 6px;
-            &::after{
-                content: '';
-                display: block;
-                height: 0;
-                overflow: hidden;
-                visibility: hidden;
-                clear: both;
-            }
-            >input{
-                width: 24px;
-                height: 24px;
-                position: absolute;
-                top: 40%;
-                
-            }
+        .shopBox{
             >div{
-                width: 680px;
-                float:right;
-               
-                >img{
-                    float: left;
+                width: 100%;
+                float: left;
+                margin-bottom: 18px;
+                padding: 12px 66px;
+                position: relative;
+                background: #fff;
+                border: 1px solid #666;
+                border-radius: 6px;
+                &::after{
+                    content: '';
+                    display: block;
+                    height: 0;
+                    overflow: hidden;
+                    visibility: hidden;
+                    clear: both;
+                }
+                >input{
+                    margin: 0;
+                    width: 24px;
+                    height: 24px;
+                    position: absolute;
+                    top: 40%;
+                    
                 }
                 >div{
-                    float: right;
-                    padding: 32px;
-                    >span:first-of-type{
-                        color: #f00;
-                        font-size: 24px;
-                        font-weight: 900;
-                        line-height: 82px;
+                    width: 680px;
+                    float:right;
+                   
+                    >img{
+                        float: left;
                     }
-                    >span:nth-of-type(2){
-                        padding: 12px 122px;
-                        color: #f00;
-                        font-size: 18px;
-                    }
-                    >p{
-                        cursor: pointer;
+                    >div{
+                        float: right;
+                        padding: 32px;
+                        >span:first-of-type{
+                            color: #f00;
+                            font-size: 24px;
+                            font-weight: 900;
+                            line-height: 82px;
+                        }
+                        >span:nth-of-type(2){
+                            padding: 12px 122px;
+                            color: #f00;
+                            font-size: 18px;
+                        }
+                        >p{
+                            cursor: pointer;
+                        }
                     }
                 }
             }
